# pip install wheel

# pip install -e .
# or
# pip install -e ".[cuda124]"

[project]
name = "tti_flux_2"
version = "0.1.0"
description = "Text-to-image Flux 2"
requires-python = ">=3.10, <3.13"
dependencies = [
    "accelerate==1.6.0",
    "av==14.0.1",
    "bitsandbytes",
    "diffusers==0.32.1",
    "einops==0.7.0",
    "huggingface-hub",
    "opencv-python",
    "pillow>=11.0.0",
    "safetensors",
    "sentencepiece",
    "tqdm",
    "transformers",
    "sageattention",
]

[project.optional-dependencies]
cuda124 = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    # "flash-attn>=2.7.0",
    # "xformers>=0.0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flux_2", "networks", "modules", "utils"]